src/css/main.scss
//common
.btn-link {
    text-decoration: none;
    &:hover {
        text-decoration: underline;
    }
}
.user-dropdown > strong {
    display: inline-block;
    width: 100%;
}
.channel-emote {
    max-height: 80px;
    max-width: 80px;
}
.chat-picture {
    max-height: 100px;
    max-width: 200px;
}
.motd-bottom-btn {
    margin-top: 10px;
}
#motd-tabs-content {
    margin-top: 10px;
}
#motd-channel-description {
    margin-bottom: 35px;
    h1 {
        margin: 0 0 15px 0;
        word-wrap: break-word;
    }
}
#currenttitle {
    border: none;
    margin: 10px 0 30px 0;
    text-align: center;
    font-size: 30px;
}
#mediainfo {
    padding: 2px 5px;
    margin: 0;
    border: 1px solid #ccc;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}




//filters
.cirno {
    color: #37B1E6;
}

.quote {
    color: #6F8F23;
}


.spoiler {
    color: #000;
    background-color: #000;
}
.spoiler * {
    visibility: hidden !important;
}
.spoiler:hover * {
    visibility: visible !important;
}

code {
    color: #2CB337;
}





//Picture in modal window
#modal-picture {
    left: 50%;
    top: 50%;
    z-index: 100000000;
    box-sizing: border-box;
}
#modal-picture-overlay {
    position: fixed;
    left: 0;
    top: 0;
    z-index: 99999999;
}
#modal-picture-options-wrapper {
    position: relative;
}
#modal-picture-options {
    position: absolute;
    width: 40px;
    left: 0;
    top: 0;
    margin-left: -41px;
    &>* {
        width: 40px;
        margin-bottom: 1px;
    }
}



//BB codes panel
.markdown-helper-templates-wrapper {
    padding-left: 5px;
    padding-right: 5px;
    overflow: hidden; /* for jquery animation */
}



//Favourite pictures and smiles
#favourite-pictures-panel, #smiles-panel {
    text-align: center;
    margin: 4px 10px 10px;
    border: 2px solid rgba(0, 10, 20, .75);
    background-color: rgba(0, 10, 20, .3);
    border-radius: 6px;
}
#favourite-pictures-panel {
    border-bottom: none;
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
}
#favourite-pictures-panel img, #smiles-panel img {
    margin: 5px;
    max-height: 40px;
    max-width: 80px;
    cursor: pointer;
}
#pictures-trash {
    position: relative;
    display: table-cell;
    min-height: 50px;
    border-right: 2px solid rgba(0,10,20,.75);
    width: 60px;
    background: rgba(0,10,20,.5);
    border-top-left-radius: 6px;
}
.favourite-pictures-panel-row {
    display: table;
    width: 100%;
    border: none;
    min-height: 60px;
}
#pictures-body-panel {
    display: table-cell;
}
.pictures-trash-icon {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -7px;
    margin-left: -7px;
}
#pictures-trash.favourite-picture-drop-hover {
    background: rgba(245, 28, 22, 0.6);
}



//Chat avatars
.chat-avatar {
    margin-right: 5px;
    background: rgba(255,255,255,.9);
    border-radius: 5px;
}
.chat-avatar_hidden {
    display: none;
}
.chat-avatar_small {
    max-width: 30px;
    max-height: 22px;
}
.chat-avatar_big {
    max-height: 75px;
    max-width: 80px;
    margin-top: 2px;
    margin-bottom: 2px;
    border-radius: 7px;
}



//Chat history
.pm-history-message {
    padding-bottom: 15px;
    border-bottom: 1px solid #555;
    margin-bottom: 15px;
}
.pm-history-content .pm-history-message:last-child {
    border-bottom: none;
}

.pm-history-message-time {
    display: inline-block;
    color: #C2C2C2;
    font-size: 13px;
    line-height: 1.4;
}
.pm-history-message-username {
    display: inline-block;
    margin-left: 5px;
    font-size: 14px;
    line-height: 1.4;
}
.pm-history-message-content {
    margin-top: 2px;
    font-size: 14px;
    line-height: 1.4;
}



//MOTD
#motd-tabs {
    text-align: center;
    &>* {
        margin-bottom: 5px;
    }
}



//Textarea before ace editor loaded
.ce-custom-editor-textarea {
    width: 100%;
    outline: none;
    background: #1D1F21;
    color: #C5C8C6;
    height: 420px;
    padding: 8px;
    border: none;
    font: 12px/normal 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
}



//Extras panel in settings
.ce-extras {
    font-size: 0;

    .col-sm-6 {
        width: 50%;
        display: inline-block;
        vertical-align: top;
        float: none;
    }

    &__item {
        font-size: 14px;
        padding: 10px;
        margin-bottom: 5px;
        border-top: 1px solid #555;
        &__title {
            font-size: 16px;
            display: block;
            &_link {
                text-decoration: underline;
                &:hover {
                    text-decoration: none;
                }
            }
        }
        &__description {
            color: #ccc;
        }
        &__button {
            margin-top: 4px;
        }
    }

    &__info-message {
        margin: 10px 0;
    }
}



//Themes panel in settings
.ce-themes {
    &__item {
        position: relative;
        height: 100px;
        width: 100%;
        margin-bottom: 10px;
        background: #000000;
        cursor: pointer;
        &__title {
            position: absolute;
            left: 0;
            top: 0;
            font-size: 16px;
            color: #ffffff;
            background: rgba(0, 0, 0, 0.8);
            padding: 10px;
            z-index: 5;
        }
        &__picture {
            position: absolute;
            left: 0;
            top: 0;
            width: 100%;
            height: 100%;
            background-size: cover;
            background-position: top right;
            background-repeat: no-repeat;
        }
    }

    &__item.active {
        border: 1px solid #78cc78;
        cursor: auto;
    }

    &__info-message {
        margin: 10px 0;
    }
}



//Videojs progress tip
//Fork of https://github.com/mickey/videojs-progressTips
.vjs-tip {
    display: none;
    opacity: 0.7;
    font-size: 10px;
    position: absolute;
    z-index: 100000;
}
.vjs-tip-body {
    position: relative;
}
.vjs-tip-body-arrow {
    background: url(data:image/gif;base64,R0lGODlhCQAJAIABAAAAAAAAACH5BAEAAAEALAAAAAAJAAkAAAIRjAOnwIrcDJxvwkplPtchVQAAOw==) no-repeat bottom left;
    bottom: -4px;
    left: 50%;
    margin-left: -4px;
    position: absolute;
    width: 9px;
    height: 4px;
}
.vjs-tip-body-inner {
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    padding: 5px 8px 4px 8px;
    background-color: black;
    color: white;
    max-width: 200px;
    text-align: center;
}


//Loader
.loading-spinner {
    font-size: 10px;
    position: relative;
    text-indent: -9999em;
    border-top: 5px solid rgba(255, 255, 255, 0.2);
    border-right: 5px solid rgba(255, 255, 255, 0.2);
    border-bottom: 5px solid rgba(255, 255, 255, 0.2);
    border-left: 5px solid #ffffff;
    transform: translateZ(0);
    border-radius: 50%;
    width: 50px;
    height: 50px;
    animation: spinning 1.1s infinite linear;

    &__loading {
        position: relative !important;
    }

    &__overlay {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: rgba(0, 0, 0, 0.7);
        z-index: 100;
    }

    &__wrapper {
        position: absolute;
        top: 50%;
        left: 50%;
        margin-left: -30px;
        margin-top: -30px;
        width: 60px;
        height: 60px;
        padding: 5px;
        background: transparent;
        border-radius: 10px;
    }
}

@keyframes spinning {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}



//smiles modal panel adaptive fixes
#emotelist table {
    width: 100% !important;
}

.emote-preview-container {
    width: 20% !important;
    height: 50px !important;
    margin: 0 !important;
    padding: 5px !important;
}

.emote-preview {
    max-width: 100% !important;
    max-height: 100% !important;
}

.profile-box, .user-dropdown, #emotelist td {
    background-color: transparent !important;
}

